refactoring of the security cache + tasks queue + notification channel
- [wip] introduction of the `client_id`.
- introduction of the `session_id`.
- [wip] addition of the tasks queue.
- [wip] addition of the notification channel.
- code refactoring of the state and the security cache.
