# agent/api.yaml
@@ -501,6 +501,8 @@ components:
         - refresh_token
         - expires_in
         - user_id
+        - client_id
+        - session_id
       properties:
         token:
           description: The security token is a 256-bit random number encoded in hexadecimal.
@@ -518,6 +520,23 @@ components:
           minimum: 0
         user_id:
           description: The unique identifier of the user that the token belongs to.
+          type: string
+          format: uuid
+        client_id:
+          description: |
+            The unique identifier of the client that requested the token.
+            The `client_id` is used to identifier the application that requested the token. This is useful for telemetry
+            purposes, typically to track the usage of the application.
+            The client_id is generated by the client application and is not validated by the server.
+          type: string
+          format: uuid
+        session_id:
+          description: |
+            The unique identifier of the session that the token belongs to.
+            Unlike the `token` and `refresh_token` this is not a security token but a session identifier. It's generated
+            when the use logs on and discarded when the user logs out. If the client is disconnected and reconnects
+            automatically, the `session_id` will be the same while the `token` and `refresh_token` may be different.
+            The `session_id` is generated by the server.
           type: string
           format: uuid
 
