# agent/src/models/auth.rs
@@ -37,11 +37,24 @@ pub struct Credentials {
 /// A security token used for authentication.
 #[derive(Debug, Clone, Serialize, Deserialize, PartialEq)]
 pub struct SecurityToken {
+    /// The unique identifier of the client that requested the token.
+    /// The `client_id` is used to identifier the application that requested the token. This is useful for telemetry
+    /// purposes, typically to track the usage of the application.
+    /// The client_id is generated by the client application and is not validated by the server.
+    pub client_id: uuid::Uuid,
+
     /// The number of seconds after which the token will expire.
     pub expires_in: u32,
 
     /// The refresh token is used to generate a new security token.
     pub refresh_token: String,
+
+    /// The unique identifier of the session that the token belongs to.
+    /// Unlike the `token` and `refresh_token` this is not a security token but a session identifier. It's generated
+    /// when the use logs on and discarded when the user logs out. If the client is disconnected and reconnects
+    /// automatically, the `session_id` will be the same while the `token` and `refresh_token` may be different.
+    /// The `session_id` is generated by the server.
+    pub session_id: uuid::Uuid,
 
     /// The security token is a 256-bit random number encoded in hexadecimal.
     pub token: String,
